--- a/Templates/Designs/TTonline/LandingPageCompaniePremium.cshtml
+++ b/Templates/Designs/TTonline/LandingPageCompaniePremium.cshtml
@@ -11,7 +11,10 @@
 @Include("Includes/GetImage_new.cshtml")
 @Include("Includes/VerifyImage.cshtml")
 
-
+<style>
+    .formtable label 
+    {color:black!important}
+</style>
  <div class="dwcontent" id="maincontent-1" title="Main Content Full Width" data-settings="unwrap=true"></div>
 
 
