--- a/Templates/Designs/TTonline/css/10_custom/00_style.css
+++ b/Templates/Designs/TTonline/css/10_custom/00_style.css
@@ -6900,3 +6900,5 @@ span.seeMore , span.seeMoreFurnizori, span.seeMoreSubcategorie{
     width:100%!important;
     height: 100%!important;
 }
+#dw-form-7 .formtable label
+{color:black!important}
