--- a/Templates/Designs/TTonlineNew/Custom/Product Filters.cshtml
+++ b/Templates/Designs/TTonlineNew/Custom/Product Filters.cshtml
@@ -10,7 +10,7 @@
 <div class="headerBox filtersHead col-xs-12 row">
     <h3 class="block-title top-title"><span><!--@Translate("filterYourResults", "Filter your results")--> Filtreaza</span></h3>
 </div>
-
+<p>test</p>
 <!-- REMOVE FILTERS -->
 
 
