--- a/Templates/Designs/TTonlineNew/css/10_custom/00_style.css
+++ b/Templates/Designs/TTonlineNew/css/10_custom/00_style.css
@@ -6938,3 +6938,5 @@ span.seeMore , span.seeMoreFurnizori, span.seeMoreSubcategorie{
 #raspunsFormularNewsletter{
     color:white;
 }
+#dw-form-7 .formtable label 
+{color:black!important}
