--- a/Templates/Designs/TTonline/Custom/Products_loop_box.cshtml
+++ b/Templates/Designs/TTonline/Custom/Products_loop_box.cshtml
@@ -147,14 +147,6 @@ if(Dealer == "" && Producator == ""){
                   <a href="@productLink" class="buton-detalii-lista"><span><text>@Translate("Vezi detalii", "Vezi detalii")</text></span></a>
 
                 </div>
-            
-                  
-                
-                  
-            
-
-            
-
           </div>
       </div>
   </div>
@@ -164,7 +156,7 @@ if(Dealer == "" && Producator == ""){
 } else{
 
 if(Dealer != "" || Producator != ""){
-
+<p>Test</p>
 <div class="col-xs-12 col-sm-3 col-md-3 " style="margin-bottom:15px; margin-top:15px; ">
   <div class="produs-col-background">
   
