--- a/Templates/Designs/TTonlineNew/eCom/Product/_Product.cshtml
+++ b/Templates/Designs/TTonlineNew/eCom/Product/_Product.cshtml
@@ -43,6 +43,7 @@
     bool verificarePret = int.TryParse(PretIntreg, out pretInteger);
     bool verificareDiscount = int.TryParse(ValoareDiscount, out discount);
     int pretCuDiscount = pretInteger - ((pretInteger * discount)/100);
+    string productLink = GetGlobalValue("Global:Request.Host") + "/" + GetString("Ecom:Product.Link.Clean");
 }
 
 @SnippetStart("OGMeta")
@@ -133,28 +134,31 @@
                         
                         
                         <div class=" col-xs-12 col-xs-6">
-                            <div class="row">
-                            @if (discount > 0)
+                            @if ((dataExpirarePromotie > CurrentDate || dataExpirarePromotie == CurrentDate))
                             {
-                                if (pretInteger > 0)
-                                {
-                                    <div class="col-xs-2">@Translate("Pret"):</div>
-                                    <div class="col-xs-10">
-                                        <span style="text-decoration: line-through;">@pretInteger @moneda </span><br/> <span>@pretCuDiscount @moneda</span><br/>
-                                    </div>
-                                }
-                                <div class="col-xs-12">
-                                    <span>@Translate("Reducere") : @discount %</span>
+                                <div class="row">
+                                    @if (discount > 0)
+                                    {
+                                        if (pretInteger > 0)
+                                        {
+                                            <div class="col-xs-2">@Translate("Pret"):</div>
+                                            <div class="col-xs-10">
+                                                <span style="text-decoration: line-through;">@pretInteger @moneda </span><br/> <span>@pretCuDiscount @moneda</span><br/>
+                                            </div>
+                                        }
+                                        <div class="col-xs-12">
+                                            <span>@Translate("Reducere") : @discount %</span>
+                                        </div>
+                                    }
+                                    @if (pretInteger > 0 && discount == 0)
+                                    {
+                                        <div class="col-xs-2">@Translate("Pret"):</div>
+                                        <div class="col-xs-10">
+                                            <span>@pretInteger @moneda </span>
+                                        </div>
+                                    }
                                 </div>
                             }
-                            @if (pretInteger > 0 && discount == 0)
-                            {
-                                <div class="col-xs-2">@Translate("Pret"):</div>
-                                <div class="col-xs-10">
-                                    <span>@pretInteger @moneda </span>
-                                </div>
-                            }
-                            </div>
                             @if (discount > 0 && (dataExpirarePromotie > CurrentDate || dataExpirarePromotie == CurrentDate))
                             {
                                 @*<div class="col-xs-12">
@@ -199,7 +203,7 @@
 
                    <div class="col-xs-12">
                   <div class="col-md-6 text-center"> 
-                         <button class="btn btn-primary" id="buton-modal-cere-detalii" data-toggle="modal" data-target="#modalformularoferta1" style="">CERE DETALII SAU OFERTA</button>                   
+                         <button class="btn btn-primary buton-oferta-lista" id="buton-modal-cere-detalii" data-toggle="modal" data-target="#modalformularoferta1"  data-product-link="@productLink" style="">CERE DETALII SAU OFERTA</button>                   
                          <div class="modal fade bd-example-modal-sm" id="modalformularoferta1" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"  aria-hidden="true" style="background-color:rgba(255,255,255, 0.7);">
                          <div class="modal-dialog modal-sm">
                          <div class="modal-content" >
