Update pagina de companie premium personalizata

--- a/Templates/Designs/TTonline/LandingPageCompaniePremium.cshtml
+++ b/Templates/Designs/TTonline/LandingPageCompaniePremium.cshtml
@@ -103,7 +103,7 @@ string CATEGORIE_PARTENER = companie["Sectiune"] !=null ? companie["Sectiune"].T
 
            
 
-
+        <h1>test</h1>
 
 @Include("/Files/Templates/Designs/TTonline/Companie Starter.cshtml");
 
