--- a/Templates/Designs/TTonlineNew/Companie Starter.cshtml
+++ b/Templates/Designs/TTonlineNew/Companie Starter.cshtml
@@ -57,7 +57,7 @@ if(TipClient == "4" && !string.IsNullOrEmpty(Banner)) {
            }
            
            	@if(!String.IsNullOrEmpty(@Email)){
-           		<a href="mailto:@Email"> @Character </a>
+           		<a href="mailto:@Email"> @Email </a>
            
            }
           </div>
