--- a/Templates/Designs/TTonlineNew/Json/QueryPublisher/Articles.cshtml
+++ b/Templates/Designs/TTonlineNew/Json/QueryPublisher/Articles.cshtml
@@ -47,6 +47,7 @@
         public string itemTitlu {get; set;}
         public int itemVisits {get; set;}
 	    public bool showItemVisits { get; set; }
+		public bool showVisitsForLoggedUsers { get; set; }
         public bool pageActive {get; set;}
         public DateTime pageActiveTo {get; set;}
         public string pageAreaID {get; set;}
@@ -241,7 +242,8 @@
         articleObject.itemTitlu=article.GetString("ItemTitlu");
         articleObject.itemVisits=article.GetInteger("ItemVisits");
 	    articleObject.showItemVisits = article.GetBoolean("ItemVizite");
-        articleObject.pageActive=article.GetBoolean("PageActive");
+	    articleObject.showVisitsForLoggedUsers = Dynamicweb.Security.UserManagement.User.IsExtranetUserLoggedIn();
+	    articleObject.pageActive=article.GetBoolean("PageActive");
         articleObject.pageActiveTo=article.GetDate("PageActiveTo");
         articleObject.pageAreaID=article.GetString("PageAreaID");
         articleObject.pageHidden=article.GetBoolean("PageHidden");
