--- a/Templates/Designs/TTonlineNew/css/custom.css
+++ b/Templates/Designs/TTonlineNew/css/custom.css
@@ -24573,146 +24573,6 @@ div.sticky.bottom {
 	border-radius: 50%
 }
 
-.comment_block {
-	width: 100%;
-	height: 100%;
-	margin: 0 auto;
-	padding: 10px;
-	background-color: #f2f2f2
-}
-
-.comment_block .create_new_comment {
-	width: 100%;
-	padding: 20px 0;
-	padding-right: 20px!important;
-	padding-bottom: 40px!important
-}
-
-.comment_block .create_new_comment .input_comment {
-	display: inline-block;
-	vertical-align: middle;
-	margin-left: 10px;
-	width: 100%
-}
-
-.comment_block .create_new_comment .input_comment input[type="text"] {
-	width: 100%;
-	font-family: 'Lato', sans-serif;
-	font-weight: 300;
-	font-size: 1.3rem;
-	padding: 10px;
-	border: none;
-	border-bottom: 2px solid #f2f2f2
-}
-
-.comment_block .create_new_comment .input_comment input[type="email"] {
-	width: 100%;
-	font-family: 'Lato', sans-serif;
-	font-weight: 300;
-	font-size: 1.3rem;
-	padding: 10px;
-	border: none;
-	border-bottom: 2px solid #f2f2f2
-}
-
-.comment_block .create_new_comment .input_comment textarea {
-	width: 100%;
-	font-family: 'Lato', sans-serif;
-	font-weight: 300;
-	font-size: 1.3rem;
-	padding: 10px;
-	border: none;
-	border-bottom: 2px solid #f2f2f2
-}
-
-.comment_block .create_new_comment .input_comment input[type="text"]:focus {
-	outline: none;
-	border-bottom: 2px solid #e6e6e6
-}
-
-.comment_block .new_comment {
-	width: 100%;
-	height: auto;
-	padding: 20px 0;
-	border-top: 1px solid #e6e6e6
-}
-
-.comment_block .new_comment .user_comment {
-	list-style-type: none
-}
-
-.comment_block .new_comment .comment_body {
-	display: inline-block;
-	vertical-align: middle;
-	width: 87%;
-	min-height: 65px;
-	margin-left: 10px;
-	padding: 5px 10px;
-	font-size: 14px;
-	color: #555;
-	background-color: #fff;
-	border-bottom: 2px solid #f2f2f2
-}
-
-.comment_block .new_comment .comment_body .replied_to {
-	margin: 5px 0;
-	background-color: #fafafa;
-	border-bottom: 2px solid #f2f2f2;
-	border-radius: 5px
-}
-
-.comment_block .new_comment .comment_body .replied_to p {
-	padding: 5px
-}
-
-.comment_block .new_comment .comment_body .replied_to span {
-	color: #6495ed;
-	margin-right: 2px
-}
-
-.comment_block .new_comment .comment_toolbar {
-	width: 100%
-}
-
-.comment_block .new_comment .comment_toolbar ul {
-	list-style-type: none;
-	padding-left: 75px;
-	font-size: 0
-}
-
-.comment_block .new_comment .comment_toolbar ul li {
-	display: inline-block;
-	padding: 5px;
-	font-size: 14px;
-	color: #d9d9d9
-}
-
-.comment_block .new_comment .comment_toolbar ul li:hover {
-	cursor: pointer
-}
-
-.comment_block .new_comment .comment_toolbar .comment_details {
-	display: inline-block;
-	vertical-align: middle;
-	width: 70%;
-	text-align: left
-}
-
-.comment_block .new_comment .comment_toolbar .comment_tools {
-	display: inline-block;
-	vertical-align: middle;
-	width: 30%;
-	text-align: right
-}
-
-.comment_block .new_comment .comment_toolbar .comment_tools li:hover {
-	color: #ccc
-}
-
-.comment_block .new_comment .user:hover {
-	color: #6495ed;
-	text-decoration: underline
-}
 
 .comment_block .new_comment .love:hover {
 	color: #ff6347
@@ -46662,10 +46522,6 @@ img.img-responsive.text-center {
 	}
 }
 
-.pagina-companie {
-	padding-top: 160px
-}
-
 .col-galerie {
 	text-align: center
 }
@@ -46714,285 +46570,7 @@ img.img-responsive.text-center {
 	}
 }
 
-.declaratiemanager {
-	margin-left: 0!important;
-	text-align: left
-}
 
-.declaratiemanager p {
-	line-height: 1.3
-}
-
-.pagina-companie .small-block .news-title {
-	font-size: 16px;
-	line-height: 1.4
-}
-
-.pagina-companie .news-block {
-	margin-bottom: 110px
-}
-
-.col-parteneri {
-	min-height: 170px;
-	display: table;
-	text-align: center;
-	width: 100%;
-	margin-bottom: 30px;
-	border: 1px solid #e9e9e9
-}
-
-.col-parteneri .dw-std-image {
-	display: table-cell;
-	vertical-align: middle;
-	text-align: center
-}
-
-.col-parteneri a {
-	display: block
-}
-
-.col-parteneri img {
-	display: block;
-	vertical-align: middle;
-	max-height: 170px;
-	width: auto;
-	margin: 0 auto
-}
-
-div.bhoechie-tab-container {
-	z-index: 10;
-	background-color: #fff;
-	padding: 0!important;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
-	margin-top: 20px;
-	-webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
-	box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
-	-moz-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
-	background-clip: padding-box;
-	opacity: .97;
-	filter: alpha(opacity=97)
-}
-
-div.bhoechie-tab-menu {
-	padding-right: 0;
-	padding-left: 0;
-	padding-bottom: 0
-}
-
-div.bhoechie-tab-menu div.list-group {
-	margin-bottom: 0
-}
-
-div.bhoechie-tab-menu div.list-group>a {
-	margin-bottom: 0
-}
-
-div.bhoechie-tab-menu div.list-group>a .glyphicon,
-div.bhoechie-tab-menu div.list-group>a .fa {
-	color: #5a55a3
-}
-
-div.bhoechie-tab-menu div.list-group>a:first-child {
-	border-top-right-radius: 0;
-	-moz-border-top-right-radius: 0
-}
-
-div.bhoechie-tab-menu div.list-group>a:last-child {
-	border-bottom-right-radius: 0;
-	-moz-border-bottom-right-radius: 0
-}
-
-div.bhoechie-tab-menu div.list-group>a.active,
-div.bhoechie-tab-menu div.list-group>a.active .glyphicon,
-div.bhoechie-tab-menu div.list-group>a.active .fa {
-	background-color: #5a55a3;
-	background-image: #5a55a3;
-	color: #fff
-}
-
-div.bhoechie-tab-menu div.list-group>a.active:after {
-	content: '';
-	position: absolute;
-	left: 100%;
-	top: 50%;
-	margin-top: -13px;
-	border-left: 0;
-	border-bottom: 13px solid transparent;
-	border-top: 13px solid transparent;
-	border-left: 10px solid #ffa700
-}
-
-div.bhoechie-tab-content {
-	background-color: #fff;
-	padding-left: 20px;
-	padding-top: 10px
-}
-
-div.bhoechie-tab div.bhoechie-tab-content:not(.active) {
-	display: none
-}
-
-div.bhoechie-tab-menu div.list-group>a.active,
-div.bhoechie-tab-menu div.list-group>a.active .glyphicon,
-div.bhoechie-tab-menu div.list-group>a.active .fa {
-	background-color: #ffa700;
-	color: #fff;
-	border-color: #ffa700;
-	font-weight: 400
-}
-
-.arhiva-editii {
-	padding-bottom: 40px
-}
-
-.tag-categorie-container a {
-	z-index: 200
-}
-
-.date-box {
-	width: 45%;
-	display: inline-block;
-	text-align: center;
-	border: 1px solid;
-	padding: 0!important
-}
-
-.date-box:last-child {
-	float: right
-}
-
-.date-title {
-	background: #ffa700
-}
-
-.event-date {
-	padding: 4px 0!important
-}
-
-.date-title span {
-	color: #fff!important
-}
-
-.date-perioada {
-	padding: 10px
-}
-
-.carousel-produse .item {
-	height: 225px
-}
-
-.carousel-produse h2 a {
-	color: #fff
-}
-
-.owl-parteneri-1 img {
-	margin: auto
-}
-
-.row-butoane-articol div {
-	margin-bottom: 15px
-}
-
-.row-butoane-articol {
-	text-align: center;
-	clear: both;
-	padding-top: 20px
-}
-
-.row-butoane-articol .btn {
-	min-width: 225px;
-	padding: 10px 0
-}
-
-.carousel-companii {
-	text-align: center
-}
-
-.carousel-companii img {
-	margin: auto
-}
-
-.carousel-companii .owl-carousel.owl-drag .owl-item a {
-	min-height: 1px
-}
-
-.premium .main-content {
-	margin-top: 30px
-}
-
-.premium .mag-content.banner-companie {
-	text-align: center
-}
-
-.col-pdf {
-	text-align: center;
-	padding: 10px
-}
-
-.subscribe-checkbox {
-	height: 15px!important
-}
-
-.modal-nelogat {
-	padding: 20px
-}
-
-.owl-parteneri-1.owl-drag .owl-item a {
-	min-height: 1px
-}
-
-.subheader {
-	margin-top: 75px;
-	padding: 10px 0;
-	display: flex;
-	align-items: center
-}
-
-.subheader .col-xs-4 {
-	text-align: right
-}
-
-@media(max-width:480px) {
-	.subheader {
-		margin: 0 -15px
-	}
-}
-
-li.active a {
-	color: #ffa700
-}
-
-.M1 li a {
-	color: #222
-}
-
-.testimonial img {
-	width: 73px!important;
-	margin: auto
-}
-
-.testimonial p {
-	padding: 0 10px;
-	font-size: 16px
-}
-
-.testimonial span {
-	min-height: 50px
-}
-
-@media(max-width:992px) {
-	.testimonial img {
-		width: 40%!important
-	}
-}
-
-.header .mag-content {
-	padding-left: 0;
-	padding-right: 0;
-	margin-left: 0;
-	margin-right: 0
-}
 
 .content-sectiune {
 	margin: 40px 0
@@ -47380,9 +46958,6 @@ span.seeMoreSubcategorie {
 	font-size: 17px
 }
 
-.homepage-shop .block-title span {
-	color: #ffa700
-}
 
 .tipcompanie-homepage-tag {
 	padding: 5px 10px;
@@ -49705,8 +49280,8 @@ div.sticky.bottom {
 	-webkit-animation: spin 2s linear infinite;
 	animation: spin 2s linear infinite;
 	position: absolute;
-	left: calc(0%);
-	top: calc(0%)
+	left: calc(50% - 60px);
+	top: calc(50% - 60px);
 }
 
 @-webkit-keyframes spin {
@@ -49796,7 +49371,9 @@ div.sticky.bottom {
 .pre-render-element--md {
 	height: 165px
 }
-
+.pre-render-element--md-slider {
+	height: 250px;
+}
 .pre-render-element--lg {
 	height: 355px
 }
@@ -49839,14 +49416,19 @@ div.sticky.bottom {
 
 .homepage-shop {
 	margin-top: -20px!important;
-	padding-bottom: 34px
+	padding-bottom: 34px;
+	height: 535px;
 }
 
 .homepage-sectiune {
 	margin-top: 25px;
-	margin-bottom: 0
+	margin-bottom: 0;
+	height: 1070px;
 }
-
+.homepage-sectiune.col-md-4 {
+	height: 365px;
+	overflow:hidden;
+}
 .main-content-three {
 	margin-top: -12px!important
 }
@@ -50047,605 +49629,6 @@ div.sticky.bottom {
 	font-weight: 600
 }
 
-.news-title {
-	background: #fff
-}
-
-.news-details {
-	color: #a9a9a9;
-	background-color: #fff;
-	font-size: 14px;
-	line-height: 20px;
-	font-weight: 400;
-	margin-right: 25px;
-	margin-left: 25px;
-	z-index: 10;
-	padding: 2em;
-	padding-top: 10px
-}
-
-.display-title-up .news-details {
-	position: absolute;
-	background: #fff;
-	font-size: 14px;
-	line-height: 20px;
-	font-weight: 400;
-	z-index: 10;
-	bottom: -90px;
-	left: 1px;
-	right: 1px;
-	margin-right: 25px;
-	margin-left: 25px;
-	padding: 2em;
-	padding-top: 10px
-}
-
-.titlu-produs-lista.news-title {
-	background: #eaeaea;
-	padding: 0 .5em
-}
-
-.small-block .news-title:hover {
-	max-height: 224px
-}
-
-.list-container {
-	display: grid
-}
-
-.onecol-noimage-summary .category,
-.onecol-noimage-nosummary .category {
-	position: initial
-}
-
-.onecol-noimage-summary .news-details,
-.onecol-noimage-nosummary .news-details {
-	margin-top: 1em
-}
-
-.onecol-noimage-summary .small-block .news-title,
-.onecol-noimage-nosummary .small-block .news-title {
-	min-height: auto
-}
-
-.onecol-noimage-summary .simple-share {
-	margin-bottom: 1em
-}
-
-.onecol-image-summary .small-block,
-.onecol-image-nosummary .small-block {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-column-gap: 1rem;
-	display: -ms-grid;
-	-ms-grid-columns: 1fr 1fr
-}
-
-.onecol-image-nosummary-small {
-	display: block
-}
-
-.onecol-image-nosummary-small .small-block {
-	display: grid;
-	grid-template-columns: 1fr 2fr;
-	display: -ms-grid;
-	-ms-grid-columns: 1fr 2fr
-}
-
-.onecol-image-summary .overlay-link,
-.onecol-image-nosummary .overlay-link,
-.onecol-image-nosummary-small .overlay-link {
-	-ms-grid-column: 1;
-	grid-column: 1;
-	-ms-grid-row: 1;
-	grid-row: 1;
-	margin-right: .5rem
-}
-
-.onecol-image-summary header,
-.onecol-image-nosummary header,
-.onecol-image-nosummary-small header {
-	-ms-grid-column: 2;
-	grid-column: 2;
-	-ms-grid-row: 1;
-	grid-row: 1;
-	margin-left: .5rem
-}
-
-.onecol-image-nosummary-small .simple-share,
-.onecol-image-nosummary-small .category {
-	display: none
-}
-
-.onecol-image-nosummary-small .news-title {
-	margin: 0;
-	font-weight: 500;
-	font-size: 14px;
-	line-height: 17px;
-	overflow: initial;
-	max-height: initial
-}
-
-.onecol-image-nosummary-small .news-details {
-	padding: 0;
-	margin-right: 0
-}
-
-.twocol-noimage-nosummary,
-.twocol-noimage-summary,
-.twocol-image-nosummary,
-.twocol-image-summary {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	display: -ms-grid;
-	-ms-grid-columns: 1fr 1fr
-}
-
-.twocol-noimage-nosummary.small-block:nth-child(1),
-.twocol-noimage-summary .small-block:nth-child(1),
-.twocol-image-nosummary .small-block:nth-child(1),
-.twocol-image-summary .small-block:nth-child(1) {
-	-ms-grid-column: 1;
-	grid-column: 1;
-	-ms-grid-row: 1;
-	grid-row: 1;
-	margin-right: 1.5rem
-}
-
-.twocol-noimage-nosummary.small-block:nth-child(2),
-.twocol-noimage-summary .small-block:nth-child(2),
-.twocol-image-nosummary .small-block:nth-child(2),
-.twocol-image-summary .small-block:nth-child(2) {
-	-ms-grid-column: 2;
-	grid-column: 2;
-	-ms-grid-row: 1;
-	grid-row: 1;
-	margin-left: 1.5rem
-}
-
-.twocol-noimage-summary .category,
-.twocol-noimage-nosummary .category {
-	position: initial
-}
-
-.twocol-noimage-summary .news-details,
-.twocol-noimage-nosummary .news-details,
-.twocol-image-summary .news-details {
-	margin-top: 1em
-}
-
-.twocol-noimage-summary .simple-share,
-.twocol-image-summary .simple-share {
-	margin-bottom: 1em
-}
-
-.twocol-image-nosummary .news-block {
-	margin-bottom: 110px
-}
-
-.section-template .small-block .news-details,
-.author-template .small-block .news-details,
-.twocol-image-nosummary .small-block .news-details {
-	position: absolute;
-	background: #fff;
-	font-size: 14px;
-	line-height: 20px;
-	font-weight: 400;
-	z-index: 10;
-	bottom: -90px;
-	left: 1px;
-	right: 1px;
-	margin-right: 25px;
-	margin-left: 25px;
-	padding: 2em;
-	padding-top: 10px
-}
-
-.threecol-image-nosummary {
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-column-gap: 1rem
-}
-
-.threecol-image-nosummary .category {
-	top: 15px;
-	left: 10px
-}
-
-.threecol-image-nosummary .simple-share span {
-	display: block
-}
-
-.product-image figure {
-	position: relative
-}
-
-.stickers-container {
-	position: absolute;
-	display: flex;
-	flex-wrap: wrap;
-	padding: .5rem 0;
-	text-transform: uppercase;
-	font-size: 1.2rem;
-	top: 1rem;
-	color: #fff
-}
-
-.stickers-container.stickers-container--top-left {
-	background-color: #c03;
-	left: -.5rem
-}
-
-.stickers-container.stickers-container--top-right {
-	background-color: #693;
-	right: -.5rem;
-	padding: .5rem 1rem
-}
-
-#loader {
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 900000;
-	width: 100vw;
-	height: 100vh;
-	background-color: rgba(0, 0, 0, .3)
-}
-
-.loader-icon {
-	border: 16px solid #f3f3f3;
-	border-radius: 50%;
-	border-top: 16px solid #ae791a;
-	width: 120px;
-	height: 120px;
-	-webkit-animation: spin 2s linear infinite;
-	animation: spin 2s linear infinite;
-	position: absolute;
-	left: calc(50% - 50px);
-	top: calc(50% - 50px)
-}
-
-@-webkit-keyframes spin {
-	0% {
-		-webkit-transform: rotate(0deg)
-	}
-	100% {
-		-webkit-transform: rotate(360deg)
-	}
-}
-
-@keyframes spin {
-	0% {
-		transform: rotate(0deg)
-	}
-	100% {
-		transform: rotate(360deg)
-	}
-}
-
-#HomePageSlider,
-.sidebar-handlebars-wrapper {
-	min-height: 2em
-}
-
-.sidebar-handlebars-wrapper.owl-carousel {
-	display: block
-}
-
-.handlebars-wrapper,
-#RecomandariTT,
-#UltimeleStiri,
-.first-container {
-	position: relative;
-	min-height: 2em
-}
-
-#RecomandariTT,
-#UltimeleStiri,
-.first-container,
-#LoopStiri {
-	clear: both
-}
-
-#myCarousel .description {
-	height: 150px;
-	overflow: hidden
-}
-
-.recomandari .news-block header {
-	position: absolute;
-	bottom: -180px
-}
-
-.companii-background {
-	background-color: #3a5375;
-	min-height: 440px;
-
-}
-
-.shop-background {
-	background-color: #3f444c
-}
-
-.list-group-item,
-.pagination li {
-	cursor: pointer
-}
-
-.pagination {
-	width: 100%;
-	text-align: center
-}
-
-.col-companie .small-block .news-details {
-	position: absolute
-}
-
-.pre-render-element {
-	background-color: #e4e4e4;
-	width: 100%;
-	margin-bottom: 1em
-}
-
-.pre-render-element--xs {
-	height: 50px
-}
-
-.pre-render-element--md {
-	height: 165px
-}
-
-.pre-render-element--lg {
-	height: 355px
-}
-
-.pre-render-element--xl {
-	height: 414px
-}
-
-.pre-render-element--title {
-	height: 25px
-}
-
-.pre-render-element--text {
-	height: 5px
-}
-
-.carousel-companii .item.placeholder {
-	margin-bottom: 120px
-}
-
-.homepage-scule {
-	margin-top: 25px!important
-}
-
-.article-date {
-	display: block
-}
-
-.news-details {
-	position: relative
-}
-
-.author-box {
-	clear: both
-}
-
-#myCarousel .item>span {
-	height: 50px
-}
-
-.homepage-shop {
-	margin-top: -20px!important;
-	padding-bottom: 34px
-}
-
-.homepage-sectiune {
-	margin-top: 25px;
-	margin-bottom: 0
-}
-
-.main-content-three {
-	margin-top: -12px!important
-}
-
-.main-content-two {
-	margin-top: -25px
-}
-
-.evenimentewidget {
-	margin-bottom: 10px
-}
-
-.evenimentewidget .previous {
-	color: #ffa700
-}
-
-.evenimentewidget .next {
-	right: 0;
-	left: auto;
-	color: #ffa700
-}
-
-.editorialwidget {
-	margin-bottom: 0
-}
-
-.mt-0 {
-	margin-top: 0
-}
-
-.img-parteneri {
-	max-height: 100px
-}
-
-.mb-20 {
-	margin-bottom: 20px
-}
-
-.mb-0 {
-	margin-bottom: 0
-}
-
-.mt-20 {
-	margin-top: 20px
-}
-
-.margin-15 {
-	margin-bottom: 15px;
-	margin-top: 15px
-}
-
-.m-0 {
-	margin: 0!important
-}
-
-.mr-02 {
-	margin-right: .2em
-}
-
-.produs-col-background .manufacturer {
-	text-align: left;
-	font-size: 12px;
-	line-height: 1.2
-}
-
-.black-font {
-	color: #000
-}
-
-.white-font {
-	color: #fff
-}
-
-.float-right {
-	float: right!important
-}
-
-.float-right {
-	float: left!important
-}
-
-.excerpt {
-	min-height: 80px;
-	max-height: 80px;
-	overflow: hidden
-}
-
-.separator-articole h3 {
-	font-size: 18px;
-	min-height: 50px;
-	max-height: 100px;
-	overflow: hidden
-}
-
-.tipcompanie4 {
-	background-color: #c03
-}
-
-.tipcompanie6 {
-	background-color: #963
-}
-
-.companii-background h3 span {
-	color: #ffa700
-}
-
-.min-height-30 {
-	min-height: 30px
-}
-
-.min-height-40 {
-	min-height: 40px
-}
-
-#LoopStiri h3 {
-	font-size: 18px;
-	overflow: hidden
-}
-
-.sectiune-revista {
-	min-height: 250px;
-	text-align: center;
-	dispay: block
-}
-
-.btn-background {
-	background-color: #ffa700!important
-}
-
-.loop-stiri-figure {
-	min-height: 230px;
-	max-height: 230px
-}
-
-.sectiune-container img,
-.lista-editii img {
-	flex-shrink: 0
-}
-
-.load-more {
-	padding: 0 10px
-}
-
-#LoopAutor {
-	display: block;
-	border-bottom: 2px solid #d6d6d6
-}
-
-#LoopAutor h1 {
-	margin-bottom: 8px;
-	border: none
-}
-
-#LoopAutor span {
-	padding-bottom: 10px
-}
-
-@media(min-width:1024px) {
-	#mobile-nav {
-		display: none
-	}
-}
-
-@media(max-width:767px) {
-	.twocol-image-nosummary .small-block .news-details {
-		margin: 0;
-		padding: 10px 10px 0
-	}
-	.subheader img {
-		height: auto;
-	}
-	#LoopStiri {
-		padding: 15px
-	}
-}
-
-.sticker-promotie {
-	background-color: red;
-	width: 40%;
-	text-align: center;
-	border-radius: 5px;
-	font-weight: 700;
-	padding: .2em
-}
-
-.pretIntreg {
-	line-height: 1em;
-	color: #000
-}
-
-.pretTaiat {
-	text-decoration: line-through;
-	color: #fff
-}
-
-.pretRedus {
-	line-height: 1.2!important;
-	font-size: 15px!important;
-	color: red;
-	font-weight: 600
-}
-
 .display-flex {
 	display: flex
 }
@@ -50662,4 +49645,61 @@ div.sticky.bottom {
 .subscribewidget p.error-message {
 	color: red;
 	margin-top: 10px
+}
+
+@media(max-width: 1024px) {
+	.homepage-sectiune {
+		height: 1075px;
+	}
+	.homepage-sectiune.col-md-4 {
+		height: 380px;
+	}
+	.pre-render-element--md {
+		height: 175px
+	}
+
+	.pre-render-element--lg {
+		height: 290px
+	}
+
+	.pre-render-element--xl {
+		height: 450px
+	}
+}
+
+@media(max-width: 768px) {
+	.flexslider {
+		height: 1392px;
+	}
+
+	.homepage-sectiune {
+		height: 1065px;
+	}
+	.homepage-sectiune.col-md-4 {
+		height: 365px;
+	}
+	#UltimeleStiri {
+		height: 525px;
+	}
+	.companii-background {
+		height: 520px;
+	}
+}
+@media(max-width: 448px) {
+	.flexslider {
+		height: 780px;
+	}
+
+	.homepage-sectiune {
+		height: 808px;
+	}
+	.homepage-sectiune.col-md-4 {
+		height: 380px;
+	}
+	#UltimeleStiri {
+		height: 540px;
+	}
+	.companii-background {
+		height: auto;
+	}
 }
